# gov-banking-bot

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
src/gov_banking_bot/: __init__.py  main.1.py.example  main.2.py.example
